--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Srinivas",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.19.0"
   }
 }
