--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Srinivas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.19.0"
+    "mongoose": "^8.19.0",
+    "validator": "^13.15.15"
   }
 }
